# cipi8

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: app.cpp  app.h  chip8.cpp  chip8.h  main.cpp  platform.cpp  platform.h
